Fix wrapping long words / urls on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,6 +15,7 @@ body {
     color: #333;
     background-color: #fafafa;
     margin: 0;
+    word-break: break-word;
 }
 
 #content {
